--- a/rla.css
+++ b/rla.css
@@ -25,6 +25,7 @@
     padding-top:2px;
     padding-bottom:2px;
     border:1px dotted grey ;
+    margin-left:6px;
 border-radius:4px 4px 4px 4px;
 }
 
