Task #44 - changed format. User's achievements stay in /summary/. All votes will be under /votes/

--- a/rla.css
+++ b/rla.css
@@ -58,6 +58,12 @@ border-radius:4px 4px 4px 4px;
 .tie {
     color:grey;
 }
+.underline-hover{
+    text-decoration:none;
+}
+.underline-hover:hover{
+   text-decoration:underline; 
+}
 .win {
     color:green;
 }
